Add Equals To Horario Partial Class

--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -120,6 +120,7 @@
     <Compile Include="EntityFramework\Titulo.cs" />
     <Compile Include="EntityFramework\Trabajador.cs" />
     <Compile Include="EntityFramework\Usuario.cs" />
+    <Compile Include="Horario.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
