Add CircularProgressBar by Sacha Barber To CustomElements

--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -141,6 +141,9 @@
     <Compile Include="Configuration.xaml.cs">
       <DependentUpon>Configuration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomElements\CircularProgressBar.xaml.cs">
+      <DependentUpon>CircularProgressBar.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CustomElements\CueBanner.cs" />
     <Compile Include="Formularios\FichaPersona.xaml.cs">
       <DependentUpon>FichaPersona.xaml</DependentUpon>
@@ -217,6 +220,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Configuration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomElements\CircularProgressBar.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
