--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -123,6 +123,8 @@
     <Compile Include="Horario.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\IHasName.cs" />
+    <Compile Include="ViewModel\ProfesorViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
