--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -144,6 +144,9 @@
     <Compile Include="CustomElements\CircularProgressBar.xaml.cs">
       <DependentUpon>CircularProgressBar.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomElements\ConfirmNotification.xaml.cs">
+      <DependentUpon>ConfirmNotification.xaml</DependentUpon>
+    </Compile>
     <Compile Include="CustomElements\CueBanner.cs" />
     <Compile Include="Formularios\FichaPersona.xaml.cs">
       <DependentUpon>FichaPersona.xaml</DependentUpon>
@@ -224,6 +227,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="CustomElements\CircularProgressBar.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomElements\ConfirmNotification.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
