--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -128,6 +128,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AlumnoViewModel.cs" />
     <Compile Include="ViewModel\IHasName.cs" />
+    <Compile Include="ViewModel\OrdenadorViewModdel.cs" />
     <Compile Include="ViewModel\PersonaViewModel.cs" />
     <Compile Include="ViewModel\ProfesorViewModel.cs" />
   </ItemGroup>
