Redo Database CodeFirst EntityFramework Model

--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -123,6 +123,7 @@
     <Compile Include="EntityFramework\Telefono.cs" />
     <Compile Include="EntityFramework\Titulo.cs" />
     <Compile Include="EntityFramework\Trabajador.cs" />
+    <Compile Include="EntityFramework\Tutores.cs" />
     <Compile Include="EntityFramework\Usuario.cs" />
     <Compile Include="Horario.cs" />
     <Compile Include="Persona.cs" />
