Modify IHasName To IIsPersona And Add Apellidos Field

--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -129,7 +129,7 @@
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\AlumnoViewModel.cs" />
-    <Compile Include="ViewModel\IHasName.cs" />
+    <Compile Include="ViewModel\IIsPersona.cs" />
     <Compile Include="ViewModel\OrdenadorViewModel.cs" />
     <Compile Include="ViewModel\PersonaViewModel.cs" />
     <Compile Include="ViewModel\ProfesorViewModel.cs" />
