--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -89,6 +89,7 @@
     <Compile Include="DataStructure\WindowSizeConversor.cs" />
     <Compile Include="DataStructure\WindowSizeEnum.cs" />
     <Compile Include="Departamento.cs" />
+    <Compile Include="EntityFramework\ActasEvaluacion.cs" />
     <Compile Include="EntityFramework\Administrativo.cs" />
     <Compile Include="EntityFramework\Alumno.cs" />
     <Compile Include="EntityFramework\Asignatura.cs" />
