--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -127,6 +127,7 @@
     <Compile Include="EntityFramework\Trabajador.cs" />
     <Compile Include="EntityFramework\Tutores.cs" />
     <Compile Include="EntityFramework\Usuario.cs" />
+    <Compile Include="Estudio.cs" />
     <Compile Include="Horario.cs" />
     <Compile Include="Persona.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
