Add Aula Partial Class

--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -80,6 +80,7 @@
     <Compile Include="AbastosDbContext.cs" />
     <Compile Include="Alumno.cs" />
     <Compile Include="Asignatura.cs" />
+    <Compile Include="Aula.cs" />
     <Compile Include="Curso.cs" />
     <Compile Include="DataStructure\DNILeterEnum.cs" />
     <Compile Include="DataStructure\MonthEnum.cs" />
