--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -139,6 +139,7 @@
     <Compile Include="ViewModel\AlumnoViewModel.cs" />
     <Compile Include="ViewModel\IIsPersona.cs" />
     <Compile Include="ViewModel\OrdenadorViewModel.cs" />
+    <Compile Include="ViewModel\PermisosUsuarioViewModel.cs" />
     <Compile Include="ViewModel\PersonaViewModel.cs" />
     <Compile Include="ViewModel\ProfesorViewModel.cs" />
   </ItemGroup>
