--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -136,6 +136,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Telefono.cs" />
     <Compile Include="Trabajador.cs" />
+    <Compile Include="ViewModel\ActaEvaluacionViewModel.cs" />
     <Compile Include="ViewModel\AlumnoViewModel.cs" />
     <Compile Include="ViewModel\IIsPersona.cs" />
     <Compile Include="ViewModel\OrdenadorViewModel.cs" />
