--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -195,6 +195,9 @@
     <Compile Include="Reclamaciones.xaml.cs">
       <DependentUpon>Reclamaciones.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Solicitudes.xaml.cs">
+      <DependentUpon>Solicitudes.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SplashScreen.xaml.cs">
       <DependentUpon>SplashScreen.xaml</DependentUpon>
     </Compile>
@@ -275,6 +278,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="ProfesorGuardia.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Solicitudes.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
