--- a/EntityFrameworkModel/Model.csproj
+++ b/EntityFrameworkModel/Model.csproj
@@ -144,6 +144,7 @@
     <Compile Include="ViewModel\PermisosUsuarioViewModel.cs" />
     <Compile Include="ViewModel\PersonaViewModel.cs" />
     <Compile Include="ViewModel\ProfesorViewModel.cs" />
+    <Compile Include="ViewModel\ReclamacionViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
