--- a/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
+++ b/Gestion_AcademicoAdministrativa_Abastos/MainWindow.csproj
@@ -184,6 +184,9 @@
     <Compile Include="CustomElements\Notification.xaml.cs">
       <DependentUpon>Notification.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Notas.xaml.cs">
+      <DependentUpon>Notas.xaml</DependentUpon>
+    </Compile>
     <Compile Include="PreLoadedButtons\AdministradorButtons.cs" />
     <Compile Include="PreLoadedButtons\AdministrativoButtons.cs" />
     <Compile Include="PreLoadedButtons\AlumnoButtons.cs" />
@@ -274,6 +277,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Formularios\FormularioHorario.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Notas.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
